--- a/pages/qidong/qidong.wxss
+++ b/pages/qidong/qidong.wxss
@@ -1,7 +1,23 @@
-page{
-  height:100%;
+page {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.content{
+
+.image-container {
+  position: relative;
   width: 100%;
-  height: 100%; 
+  height: 100%;
+}
+
+.image {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  background-color: #eeeeee;
 }
