--- a/pages/qidong/qidong.wxss
+++ b/pages/qidong/qidong.wxss
@@ -1,23 +1,12 @@
-page {
-  height: 100vh;
+/* 设置页面为全屏 */
+.page {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100vh; /* 确保高度为视窗高度 */
 }
 
-.image-container {
+.full-screen-container {
   position: relative;
   width: 100%;
   height: 100%;
-}
-
-.image {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  max-width: 100%;
-  height: auto;
-  object-fit: contain;
-  background-color: #eeeeee;
 }
