--- a/pages/homepage/homepage.wxss
+++ b/pages/homepage/homepage.wxss
@@ -1,1 +1,7 @@
-/* pages/homepage/homepage.wxss */
+.swiper-image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
